<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/descripcionEjercicioTV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="142dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloEjercicioTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloejerciciotextview" />

            <TextView
                android:id="@+id/descripcionTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcionTitleTextView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcionejerciciotextview" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>